# LearnImGUI

./: .gitmodules  CMakeLists.txt  LICENSE  desktopBat.in  readme.md
application/: CMakeLists.txt
application/gameDemo/: CMakeLists.txt  main.cpp
cases/: CMakeLists.txt
cases/0001_helloWorld/: CMakeLists.txt  main.cpp
cases/9999_gameFrame/: CMakeLists.txt  baseObject.h  baseWindow.h  controlWindow.cpp  controlWindow.h  dialogueWindow.cpp  dialogueWindow.h  gameWindow.cpp  gameWindow.h  main.cpp  mainWindow.cpp  person.cpp  person.h  personDefine.h  person_npc.cpp  person_npc.h
doc/: document.md
doc/developDocument/: gameBaseData.md  gameFileFormat.md  gameWindow.md
game/: testGame.json
